Correções no CRUD de Agendamento